src/parse/snapshots/vfpl__parse__test__nullable_ty.snap
---
source: src/parse/test.rs
expression: parsed

---
[
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Absent,
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: NoValue,
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Null,
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Undefined,
        },
    ),
]
