src/parse/snapshots/vfpl__parse__test__other_tys.snap
---
source: src/parse/test.rs
expression: parsed

---
[
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Name(
                "Boolean",
            ),
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Name(
                "Integer",
            ),
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Name(
                "String",
            ),
        },
    ),
    Ok(
        Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Name(
                "Float",
            ),
        },
    ),
]
