src/parse/snapshots/vfpl__parse__test__r#break.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Break {
        span: Span {
            start: 0,
            end: 0,
        },
    },
)
