src/parse/snapshots/vfpl__parse__test__return_number.snap
---
source: src/parse/test.rs
expression: parsed

---
Err(
    ParseError {
        span: Span {
            start: 0,
            end: 0,
        },
        message: "Cannot return outside of function",
        note: None,
        suggestion: None,
    },
)
