src/parse/snapshots/vfpl__parse__test__return_stmt.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Return(
        Return {
            span: Span {
                start: 0,
                end: 0,
            },
            expr: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Int(
                        9,
                    ),
                },
            ),
        },
    ),
)
