src/parse/snapshots/vfpl__parse__test__return_ty_absent.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    FnReturn {
        span: Span {
            start: 0,
            end: 0,
        },
        ty: Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Absent,
        },
    },
)
