src/parse/snapshots/vfpl__parse__test__single_string_literal.snap
---
source: src/parse/test.rs
expression: string

---
Ok(
    Literal {
        span: Span {
            start: 0,
            end: 0,
        },
        kind: String(
            "string",
        ),
    },
)
