src/parse/snapshots/vfpl__parse__test__typed_ident_absent.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    TypedIdent {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "name",
        ty: Ty {
            span: Span {
                start: 0,
                end: 0,
            },
            kind: Absent,
        },
    },
)
