src/parse/snapshots/vfpl__parse__test__while_stmt_with_body.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    While(
        While {
            span: Span {
                start: 0,
                end: 0,
            },
            cond: Comparison(
                Comparison {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    lhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Absent,
                        },
                    ),
                    rhs: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: False,
                        },
                    ),
                    kind: Eq,
                },
            ),
            body: Body {
                span: Span {
                    start: 0,
                    end: 0,
                },
                stmts: [
                    Add(
                        ArithmeticOp {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            expr: Literal(
                                Literal {
                                    span: Span {
                                        start: 0,
                                        end: 0,
                                    },
                                    kind: Int(
                                        9,
                                    ),
                                },
                            ),
                            var: "A",
                            kind: Add,
                        },
                    ),
                ],
            },
        },
    ),
)
